# finite-field-spaces

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
experiments/: coverage_experiment.py  coverage_experiment_results.csv  coverage_experiment_results.npz  coverage_experiment_results.txt  inspect_zero_holes.py  jaber_kumar_exploration.ipynb  k6_zero_holes_duplicates.npz  k_balls_experiment_results.npz  print_experiment_summary.py  run_3ball_fwht.py  run_3ball_lowmem.py  run_k_balls_experiment.py
notebooks/: jaber_kumar_exploration.ipynb  k6_zero_holes_inspection_summary.npz  print_experiment_summary.py  run_k_balls_experiment.py
src/: __init__.py  core.py  covers.py  fwht_operators.py  geometries.py  operators.py  run_3ball_fwht.py
src/ffspaces/: __init__.py  cli.py  core.py  covers.py  fwht_operators.py  geometries.py  lowmem.py  operators.py
tests/: test_core_and_operators.py  test_fwht_sumset_equivalence.py  test_lowmem_and_cli.py  test_public_api.py
