[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffspaces"
version = "0.3.1"
authors = [{name="Nathan Hoehndorf"}]
description = "A computational laboratory for finite field vector spaces, Hamming balls, and sumset structural analysis."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"]
dependencies = ["numpy>=1.24.0"]
optional-dependencies = { test = ["pytest>=7.0"] }
[project.scripts]
ffspaces = "ffspaces.cli:main"

[project.urls]
"Homepage" = "https://github.com/nathanhoehndorf/finite-field-spaces"

[tool.setuptools]
license-files = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ffspaces*"]